changed file name and markdown text

--- a/interest-payments.ipynb
+++ b/interest-payments.ipynb
@@ -56,41 +56,41 @@
     "\n",
     "\n",
     "### brand new  BMW 2301 Coupe with a 60 month term\n",
-    "Costs:                  $38,200\n",
-    "Down Payment:           $2,500\n",
-    "Interest Rate:          5.99% \n",
-    "Monthly Payment:        $690.02\n",
+    "Costs:                  $38,200  \n",
+    "Down Payment:           $2,500  \n",
+    "Interest Rate:          5.99%   \n",
+    "Monthly Payment:        $690.02  \n",
     "\n",
-    "Total Interest Payed:   $5,700.85\n",
-    "Percent of loan:        15.97%\n",
+    "Total Interest Payed:   $5,700.85  \n",
+    "Percent of loan:        15.97%  \n",
     "\n",
     "### brand new  BMW 2301 Coupe with a 30 month term\n",
-    "Costs:                  $38,200\n",
-    "Down Payment:           $2,500\n",
-    "Interest Rate:          5.99% \n",
-    "Monthly Payment:        $1,284.29\n",
+    "Costs:                  $38,200  \n",
+    "Down Payment:           $2,500  \n",
+    "Interest Rate:          5.99%  \n",
+    "Monthly Payment:        $1,284.29  \n",
     "\n",
-    "Total Interest Payed:   $2,828.58\n",
-    "Percent of loan:        7.92%\n",
+    "Total Interest Payed:   $2,828.58  \n",
+    "Percent of loan:        7.92%  \n",
     "\n",
     "\n",
     "### $500k loan on a 30 year mortgage\n",
-    "Costs:                  $500,000\n",
-    "Down Payment:           $0\n",
-    "Interest Rate:          7.489% \n",
-    "Monthly Payment:        $3492\n",
+    "Costs:                  $500,000  \n",
+    "Down Payment:           $0  \n",
+    "Interest Rate:          7.489%  \n",
+    "Monthly Payment:        $3492  \n",
     "\n",
-    "Total Interest Payed:   $757,535.57\n",
-    "Percent of loan:        151.51%\n",
+    "Total Interest Payed:   $757,535.57  \n",
+    "Percent of loan:        151.51%  \n",
     "\n",
     "### $500k loan on a 15 year mortgage\n",
-    "Costs:                  $500,000\n",
-    "Down Payment:           $0\n",
-    "Interest Rate:          6.495% \n",
-    "Monthly Payment:        $4354\n",
+    "Costs:                  $500,000  \n",
+    "Down Payment:           $0  \n",
+    "Interest Rate:          6.495%  \n",
+    "Monthly Payment:        $4354  \n",
     "\n",
-    "Total Interest Payed:   $283,769.60\n",
-    "Percent of loan:        56.75%\n"
+    "Total Interest Payed:   $283,769.60  \n",
+    "Percent of loan:        56.75%  \n"
    ]
   },
   {
@@ -101,7 +101,9 @@
     "# Takeaways\n",
     "\n",
     "- Every marginal decrease in interest rate or number of installments significantly decreases the total amount of interest paid over the course of the loan.\n",
-    "- Essentailly, the only way for a property to 'pay for itself' would be for it to increase in value the same amount as the interst paid on the loan by the time it is paid off.\n"
+    "- Essentailly, the only way for a property to 'pay for itself' would be for it to increase in value the same amount as the interst paid on the loan by the time it is paid off.\n",
+    "\n",
+    "note: these takeaways do not take into account the impact of inflation\n"
    ]
   },
   {
